--- a/backend/sample.env
+++ b/backend/sample.env
@@ -6,3 +6,5 @@ DB_USER=your_DB_USER
 DB_PASSWORD=your_DB_PASSWORD
 DB_HOST=your_DB_HOST
 DB_PORT=your_DB_PORT
+GOOGLE_CLIENT_ID=your_GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET=your_GOOGLE_CLIENT_SECRET
