--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "mywebapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,30 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.14.15",
-    "@mui/material": "^5.14.15",
-    "axios": "^1.5.1",
-    "bootstrap": "^5.3.2",
-    "dotenv": "^16.3.1",
-    "gapi-script": "^1.2.0",
+    "autoprefixer": "^10.4.16",
+    "framer-motion": "^10.16.4",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
-    "react-router-dom": "^6.17.0"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "tailwindcss": "^3.3.4",
+    "vite": "^4.5.0"
   }
 }
