--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@mui/system": "^5.14.15",
     "@react-oauth/google": "^0.11.1",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
