--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ django-cors-headers>=4.3
 google_api_python_client>=2.1
 google_auth_oauthlib>=1.1
 google-auth-httplib2>=0.1
+django-storages[s3]>=1.14
+Pillow>=10.1
