--- a/backend/sample.env
+++ b/backend/sample.env
@@ -8,3 +8,6 @@ DB_HOST=your_DB_HOST
 DB_PORT=your_DB_PORT
 GOOGLE_CLIENT_ID=your_GOOGLE_CLIENT_ID
 GOOGLE_CLIENT_SECRET=your_GOOGLE_CLIENT_SECRET
+BUCKET_NAME=your_BUCKET_NAME
+AMAZON_S3_ACCESS_KEY=YOUR_S3_ACCESS_KEY
+AMAZON_S3_SECRET_ACCESS_KEY=YOUR_S3_SECRET
