--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@syncfusion/ej2-base": "^23.1.41",
     "@syncfusion/ej2-kanban": "^23.1.36",
     "@tremor/react": "^3.11.1",
+    "@wojtekmaj/react-daterange-picker": "^5.4.4",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
