--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-datetime-picker": "^5.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-ios-time-picker": "^0.2.2",
     "react-router-dom": "^6.18.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.12.0"
